--- a/app/blocks/characteristics-table/characteristics-table.scss
+++ b/app/blocks/characteristics-table/characteristics-table.scss
@@ -77,4 +77,28 @@
       }
     }
   }
+
+  &_dark.table {
+    color: $color-basic;
+  }
+
+  &_large.table {
+    @include text-big;
+
+    @include screen('sm') {
+      @include text15;
+    }
+  }
+
+  &_pivot.table {
+
+    tr {
+      padding-top: 41px;
+      padding-bottom: 8px;
+
+      &:last-child {
+        border-bottom: 1px solid $color-border-light;
+      }
+    }
+  }
 }
