--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -118,6 +118,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       }
     }
 
+    &_flex {
+      display: flex;
+    }
+
     #{$b}_big & {
       padding: $grid-gap-vertical-big $grid-gap-big/2 0;
     }
