--- a/app/blocks/info-price/info-price.scss
+++ b/app/blocks/info-price/info-price.scss
@@ -31,4 +31,20 @@
       @include heading-4;
     }
   }
+
+  &_small {
+
+    #{$b}__text {
+      @include heading-4;
+
+      font-weight: 700;
+      transition: color $ease-main;
+
+      @include screen('sm') {
+        @include text15;
+
+        line-height: 1.2;
+      }
+    }
+  }
 }
