--- a/app/blocks/space-reservation/space-reservation.pug
+++ b/app/blocks/space-reservation/space-reservation.pug
@@ -12,3 +12,7 @@ mixin space-reservation-table
 mixin space-reservation-controls
   +e.controls&attributes(attributes)
     block
+
+mixin space-reservation-price
+  +e.price&attributes(attributes)
+    block
