--- a/app/components/page-header/page-header.scss
+++ b/app/components/page-header/page-header.scss
@@ -35,6 +35,18 @@
     }
   }
 
+  &_lpad {
+    padding: 45px 0 50px;
+
+    @include screen('md') {
+      padding: 35px 0 40px;
+    }
+
+    @include screen('sm') {
+      padding: 19px 0;
+    }
+  }
+
   .container {
     display: block;
   }
