--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -105,6 +105,7 @@ include ../components/main-menu/main-menu
 include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
 include ../components/page-header/page-header
+include ../components/pivot-table/pivot-table
 include ../components/popup-add-offer/popup-add-offer
 include ../components/popup-signin/popup-signin
 include ../components/side-navigation/side-navigation
