--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -21,6 +21,7 @@ block content
         +link(href="conversation.html") Messages One Conversation (conversation.html)
         +link(href="reservation-history.html") Reservation History (reservation-history.html)
         +link(href="host-reservations.html") HOST reservations (host-reservations.html)
+        +link(href="order-summary.html") Order summary IN PROGRESS (order-summary.html)
 
       +page-title._small Попапы
       +e.list
