--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -258,6 +258,28 @@ block content
                   li Элемент списка
               li Элемент списка
               li Элемент списка
+        +ui-description .content-zone._mid
+        +ui-special()
+          +content-zone.content-zone_mid
+            h1 Заголовок H1 (heading-1)
+            h2 Заголовок H2 (heading-2)
+            h3 Заголовок H3 (heading-3)
+            h4 Заголовок H4 (heading-4)
+            h5 Заголовок H5 (heading-5)
+            h6 Заголовок H6 (heading-6)
+            p Текст p (text)<br> Цитата внутри текста p: <q>Цитата q</q>
+            p <small>Тег small внутри p (text-small)</small>
+            p ссылка внутри текста
+              a(href="#") ссылка
+            blockquote Цитата blocquoute
+            ul
+              li Элемент списка
+                ul
+                  li Элемент списка
+                  li Элемент списка
+                  li Элемент списка
+              li Элемент списка
+              li Элемент списка
         +ui-description .content-zone._small
         +ui-special()
           +content-zone.content-zone_small
@@ -1069,6 +1091,10 @@ block content
       +ui-section-content
         +ui-description .info-price
         +info-price('Starting at Just') £300 per month
+        +ui-description .info-price._small
+        +info-price('Starting at Just')._small £300 per month
+        +ui-description .info-price no label
+        +info-price()._small £300 per month
 
     //- page-title
     +ui-section
