--- a/app/blocks/info-price/info-price.pug
+++ b/app/blocks/info-price/info-price.pug
@@ -1,5 +1,6 @@
 mixin info-price(describe)
   +b.info-price&attributes(attributes)
-    +e.label!= describe
+    if describe
+      +e.label!= describe
     +e.text
       block
