--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -325,6 +325,15 @@
       margin-bottom: 16px;
     }
 
+    &_bmg,
+    #{$b}_inner &_bmg {
+      margin-bottom: 43px;
+
+      @include screen('sm') {
+        margin-bottom: 20px;
+      }
+    }
+
     &-content {
       width: 100%;
     }
