--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -108,6 +108,7 @@ $color-status-decline-dark: #5e2e2e;
 $color-gradient-red1: #ba4d42;
 $color-gradient-red2: #e66a5e;
 $color-factor: #c0c5ca;
+$color-footnote-star: #1fcaca;
 
 // ##########
 // Transitions
