order summary final

--- a/app/blocks/breadcrumbs/breadcrumbs.scss
+++ b/app/blocks/breadcrumbs/breadcrumbs.scss
@@ -20,13 +20,12 @@
       &::after {
         @include pseudo;
 
-        top: 50%;
+        top: 12px;
         margin: auto;
         right: 13px;
         width: 4px;
         height: 1px;
         background-color: $color-basic;
-        transform: translate3d(0, -50%, 0);
       }
     }
 
