--- a/app/blocks/space-reservation/space-reservation.scss
+++ b/app/blocks/space-reservation/space-reservation.scss
@@ -121,5 +121,13 @@
 
   &__price {
     margin-top: 25px;
+
+    @include screen("md") {
+      margin-top: -4px;
+    }
+
+    @include screen('sm') {
+      margin-top: 0;
+    }
   }
 }
