--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -1543,6 +1543,42 @@ block content
             +e.TR.row
               +e.TD.cell Current Price:
               +e.TD.cell 475&nbsp;&pound; + VAT&nbsp;/&nbsp;mo
+        +ui-description .characteristics-table._large
+        +characteristics-table._large
+          body
+            +e.TR.row
+              +e.TD.cell Reservation Date:
+              +e.TD.cell <time datetime="2018-12-27">27 December 2018</time>
+            +e.TR.row
+              +e.TD.cell Duration:
+              +e.TD.cell Untill Cancelled
+            +e.TR.row
+              +e.TD.cell Current Price:
+              +e.TD.cell 475&nbsp;&pound; + VAT&nbsp;/&nbsp;mo
+        +ui-description .characteristics-table._dark
+        +characteristics-table._dark
+          body
+            +e.TR.row
+              +e.TD.cell Reservation Date:
+              +e.TD.cell <time datetime="2018-12-27">27 December 2018</time>
+            +e.TR.row
+              +e.TD.cell Duration:
+              +e.TD.cell Untill Cancelled
+            +e.TR.row
+              +e.TD.cell Current Price:
+              +e.TD.cell 475&nbsp;&pound; + VAT&nbsp;/&nbsp;mo
+        +ui-description .characteristics-table._pivot
+        +characteristics-table._pivot
+          body
+            +e.TR.row
+              +e.TD.cell Reservation Date:
+              +e.TD.cell <time datetime="2018-12-27">27 December 2018</time>
+            +e.TR.row
+              +e.TD.cell Duration:
+              +e.TD.cell Untill Cancelled
+            +e.TR.row
+              +e.TD.cell Current Price:
+              +e.TD.cell 475&nbsp;&pound; + VAT&nbsp;/&nbsp;mo
 
     -var messages = getData('messages-old.json');
 
@@ -1565,8 +1601,8 @@ block content
               +box._size10._blue
               +box._size10._green
             +space-description-table
-        +ui-description .space-description in request
-        +space-description
+        +ui-description .space-description._request in request
+        +space-description._request
           +space-description-image('assets/images/space24.jpg')
           +space-description-content
             +space-description-title RNR Property - Oxford Street
@@ -1797,6 +1833,17 @@ block content
       +ui-section-content
         +ui-description .offer-counters
         +offer-counters('3', '2', '_orange') hot space
+
+    //- request
+    +ui-section
+      +ui-section-head
+        h2 request
+        p Блок: block/request
+      +ui-section-content
+        +ui-description .request with buttons
+        +request-full('1', '1', '455', 'buttons')
+        +ui-description .request with status
+        +request-full('1', '2', '730', 'accept')
 
 block panels
   +main-menu
