--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -13,6 +13,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
   margin-right: -$grid-gap/2;
   margin-top: -$grid-gap-vertical;
 
+  &_ac {
+    align-items: center;
+  }
+
   &_mid {
     margin-left: -15px;
     margin-right: -15px;
@@ -116,10 +120,6 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       @include screen('sm') {
         order: 3;
       }
-    }
-
-    &_flex {
-      display: flex;
     }
 
     #{$b}_big & {
