--- a/app/pages/order-summary/order-summary.pug
+++ b/app/pages/order-summary/order-summary.pug
@@ -20,7 +20,7 @@ block content
       +e.wrapper
         +content-column-aside
           +sidebar._no-bg
-            +space-reservation()._side
+            +space-reservation()._side._bmg
               +grid.grid_layout.grid_no-top
                 +col({sm: 12, md:6, xl: 12})
                   +space-reservation-info(space)
