--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -119,6 +119,11 @@
       height: 14px;
     }
 
+    &_breafcase {
+      width: 24px;
+      height: 20px;
+    }
+
     #{$b}_no-shadow & {
       filter: none;
     }
