--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -13,6 +13,7 @@ include ../blocks/bubble/bubble
 include ../blocks/burger/burger
 include ../blocks/button-heart/button-heart
 include ../blocks/button/button
+include ../blocks/card-mask/card-mask
 include ../blocks/category-filter/category-filter
 include ../blocks/characteristics-table/characteristics-table
 include ../blocks/close/close
@@ -20,6 +21,7 @@ include ../blocks/content-zone/content-zone
 include ../blocks/conversation-info/conversation-info
 include ../blocks/dialog/dialog
 include ../blocks/divider/divider
+include ../blocks/dots/dots
 include ../blocks/dropdown/dropdown
 include ../blocks/facility/facility
 include ../blocks/factor/factor
@@ -27,10 +29,13 @@ include ../blocks/filter-dialog/filter-dialog
 include ../blocks/filter-list/filter-list
 include ../blocks/filter-name/filter-name
 include ../blocks/filter-reset/filter-reset
+include ../blocks/footnote-star/footnote-star
+include ../blocks/footnote/footnote
 include ../blocks/form-box/form-box
 include ../blocks/form-elements/form-elements
 include ../blocks/form-panel/form-panel
 include ../blocks/form/form
+include ../blocks/gradients/gradients
 include ../blocks/grid/grid
 include ../blocks/header-menu/header-menu
 include ../blocks/header-user/header-user
@@ -38,6 +43,7 @@ include ../blocks/hint/hint
 include ../blocks/icon/icon
 include ../blocks/indicator/indicator
 include ../blocks/info-price/info-price
+include ../blocks/info/info
 include ../blocks/link/link
 include ../blocks/lists/lists
 include ../blocks/logo/logo
@@ -60,6 +66,7 @@ include ../blocks/page-title/page-title
 include ../blocks/page/page
 include ../blocks/pagination/pagination
 include ../blocks/panel/panel
+include ../blocks/payment-card/payment-card
 include ../blocks/popups/popups
 include ../blocks/price/price
 include ../blocks/put-block-into-slot/put-block-into-slot
