--- a/app/pages/order-summary/order-summary.pug
+++ b/app/pages/order-summary/order-summary.pug
@@ -8,12 +8,12 @@ block header
 
 block content
   - var space = {type: {name: "DEDICATED DESK", color: "_red"}, img: "assets/images/space2.jpg", heart: "", flag: "", boxes: [{class: "_orange"}, {class: "_red"}, {class: "_blue"}], title: "Blooming Founders (Former Blooms London)", location: "EC2A, London"};
-  +page-header._wide-lg._lpad
+  +page-header._lpad
     .container
       +grid.grid_layout
-        +col({ lg:12, xl: 3})
+        +col({ md:12, xl: 3})
           +link-icon('select-arrow')._back._bold.__back(href="#") Back to Space
-        +col({ lg:12, xl: 9}).hide-lg
+        +col({ md:12, xl: 9}).hide-md
           +breadcrumbs(['Home', 'Search Results', 'Blooming Founder (formre Blooms...', 'Reservation request'])
   +content-origin._reverse._wide-lg._last
     .container
