--- a/app/layouts/default-login-host.pug
+++ b/app/layouts/default-login-host.pug
@@ -7,6 +7,7 @@ html(lang='en')
   body.is-login
     block header
     - var addClass = headerClass || ''
+    +gradients
     +header(true)(class=addClass + ' is-login')
 
     +b.MAIN.page
