--- a/app/layouts/default-with-mobile-panel-login.pug
+++ b/app/layouts/default-with-mobile-panel-login.pug
@@ -7,6 +7,7 @@ html(lang='en')
   body.is-panel.is-login
     block header
     - var addClass = headerClass || ''
+    +gradients
     +header()(class=addClass + ' is-login')
 
     +b.MAIN.page
