--- a/app/layouts/default.pug
+++ b/app/layouts/default.pug
@@ -7,6 +7,7 @@ html(lang='en')
   body
     block header
     - var addClass = headerClass || ''
+    +gradients
     +header()(class=addClass)
 
     +b.MAIN.page
