--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -59,6 +59,34 @@
         margin-bottom: 72px;
       }
     }
+
+    &_mg75 {
+      &:not(:last-of-type) {
+        margin-bottom: 75px;
+      }
+    }
+
+    &_mg80 {
+      &:not(:last-of-type) {
+        margin-bottom: 80px;
+      }
+    }
+
+    &_mg105 {
+      &:not(:last-of-type) {
+        margin-bottom: 105px;
+      }
+    }
+  }
+
+  &__content {
+    display: block;
+    width: 100%;
+    transition: opacity $ease-main;
+
+    &.is-disabled {
+      opacity: .42;
+    }
   }
 
   &__header {
@@ -73,6 +101,22 @@
 
     @include screen('sm') {
       margin-bottom: 59px;
+    }
+
+    &_mg14 {
+      margin-bottom: 14px;
+    }
+
+    &_mg30 {
+      margin-bottom: 30px;
+    }
+
+    &_mg46 {
+      margin-bottom: 46px;
+
+      @include screen('sm') {
+        margin-bottom: 40px;
+      }
     }
 
     &_smg {
@@ -279,6 +323,10 @@
     }
   }
 
+  &__divider {
+    margin-bottom: 40px;
+  }
+
   &__bottom {
     display: block;
     width: 100%;
@@ -347,6 +395,10 @@
     &:not(:first-child) {
       margin-top: 40px;
     }
+  }
+
+  &__checker {
+    margin-bottom: 24px;
   }
 
   &_pb {
