--- a/app/blocks/social-button/social-button.scss
+++ b/app/blocks/social-button/social-button.scss
@@ -22,6 +22,10 @@
     @include text15;
   }
 
+  &_white {
+    background-color: $color-white;
+  }
+
   &__icon {
     position: absolute;
     font-size: 0;
