--- a/app/blocks/tabs/tabs.pug
+++ b/app/blocks/tabs/tabs.pug
@@ -6,6 +6,11 @@ mixin tab()
   +e.LI.tab&attributes(attributes)
     block
 
+mixin tab-container()
+  +e.LI.tab_button&attributes(attributes)
+    +e.tab-content
+      block
+
 mixin tabs-content()
   .tabs-content&attributes(attributes)
     block
