--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -215,6 +215,14 @@
     }
   }
 
+  &_heading {
+    margin-top: 44px;
+
+    @include screen('lg') {
+      margin-top: 0;
+    }
+  }
+
   &_reverse {
 
     .container {
