--- a/app/pages/account-settings/account-settings.pug
+++ b/app/pages/account-settings/account-settings.pug
@@ -36,7 +36,7 @@ block content
                         option(value="ru") Russia
                         option(value="de") Germany
                         option(value="fr") France
-                +col({xl: 6, md:12 }).grid__col_lg-order2
+                +col({xl: 6, md:12 }).grid__col_md-order2
                   +form-section-wrapper
                     +form-box('Phone number', '', 'div')._phone
                       +input(type="tel" name="phone-code" value="+44" placeholder="Phone code" data-tel-code).form-box__phone_code
@@ -62,7 +62,7 @@ block content
                   +form-section-wrapper
                     +form-box('New password')
                       +input(type="password" name="newPassword")
-                +col({xl: 6, md:12 }).grid__col_lg-order2
+                +col({xl: 6, md:12 }).grid__col_md-order2
                   +form-section-wrapper
                     +form-section-text._compensate
                       p Forgot your existing password?
