--- a/app/blocks/divider/divider.pug
+++ b/app/blocks/divider/divider.pug
@@ -1,3 +1,3 @@
-mixin divider()
-  +b.HR.divider&attributes(attributes)
+mixin divider(tag)
+  +b(tag || 'hr').divider&attributes(attributes)
     block
