--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -28,18 +28,6 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     }
   }
 
-  &_big {
-    margin-left: -$grid-gap-big/2;
-    margin-right: -$grid-gap-big/2;
-    margin-top: -$grid-gap-vertical-big;
-  }
-
-  &_bigger {
-    margin-left: -30px;
-    margin-right: -30px;
-    margin-top: -$grid-gap-vertical-big;
-  }
-
   &_layout {
     margin-top: -45px;
     margin-left: -25px;
@@ -56,6 +44,22 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       margin-right: -5px;
       margin-top: -10px;
     }
+
+    &_no-top {
+      margin-top: 0;
+    }
+  }
+
+  &_big {
+    margin-left: -$grid-gap-big/2;
+    margin-right: -$grid-gap-big/2;
+    margin-top: -$grid-gap-vertical-big;
+  }
+
+  &_bigger {
+    margin-left: -30px;
+    margin-right: -30px;
+    margin-top: -$grid-gap-vertical-big;
   }
 
   &_blog {
@@ -70,11 +74,15 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     margin-top: -28px;
   }
 
+  &_int10 {
+    margin-top: -10px;
+  }
+
   &_reserv {
     margin-top: -60px;
   }
 
-  &_no-top {
+  &_no-top:not(.grid_inner) {
     margin-top: 0;
   }
 
@@ -103,13 +111,13 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       }
     }
 
-    &_lg-order2 {
+    &_md-order2 {
       @include screen('md') {
         order: 2;
       }
     }
 
-    &_lg-order3 {
+    &_md-order3 {
       @include screen('md') {
         order: 3;
       }
@@ -131,14 +139,6 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       display: flex;
     }
 
-    #{$b}_big & {
-      padding: $grid-gap-vertical-big $grid-gap-big/2 0;
-    }
-
-    #{$b}_bigger & {
-      padding: $grid-gap-vertical-big 30px 0;
-    }
-
     #{$b}_layout & {
       padding: 45px 25px 0;
 
@@ -149,6 +149,26 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       @include screen('sm') {
         padding: 10px 5px 0;
       }
+    }
+
+    #{$b}_layout_no-top & {
+      padding: 0 25px;
+
+      @include screen('md') {
+        padding: 0 15px;
+      }
+
+      @include screen('sm') {
+        padding: 0 5px;
+      }
+    }
+
+    #{$b}_big & {
+      padding: $grid-gap-vertical-big $grid-gap-big/2 0;
+    }
+
+    #{$b}_bigger & {
+      padding: $grid-gap-vertical-big 30px 0;
     }
 
     #{$b}_blog & {
@@ -167,8 +187,8 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       padding-top: 28px;
     }
 
-    #{$b}_no-top & {
-      padding-top: 0;
+    #{$b}_int10 & {
+      padding-top: 10px;
     }
 
     #{$b}_mid & {
@@ -177,6 +197,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       @include screen('sm') {
         padding-top: 10px;
       }
+    }
+
+    #{$b}_no-top:not(.grid_inner) & {
+      padding-top: 0;
     }
   }
 }
