--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -39,6 +39,7 @@ include ../blocks/gradients/gradients
 include ../blocks/grid/grid
 include ../blocks/header-menu/header-menu
 include ../blocks/header-user/header-user
+include ../blocks/heading/heading
 include ../blocks/hint/hint
 include ../blocks/icon/icon
 include ../blocks/indicator/indicator
