--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -109,6 +109,9 @@ $color-gradient-red1: #ba4d42;
 $color-gradient-red2: #e66a5e;
 $color-factor: #c0c5ca;
 $color-footnote-star: #1fcaca;
+$color-note-green: #0acda7;
+$color-mask-bg1: rgba(#172640, .41);
+$color-mask-bg2: rgba(#233435, .39);
 
 // ##########
 // Transitions
